# debcargo

./: .gitlab-ci.yml  Cargo.toml  HACKING.md  README.md  TODO  TODO.md  debcargo.toml.example
.github/workflows/: rust.yml
src/: build_order.rs  config.rs  copyright.rs  crates.rs  debian.rs  errors.rs  lib.rs  main.rs  overrides.rs  package.rs  util.rs
src/debian/: build_order.rs  changelog.rs  control.rs  copyright.rs  dependency.rs  mod.rs
src/debian/control/: mod.rs  package.rs  source.rs  tests.rs
src/debian/copyright/: tests.rs
src/debian/licenses/: CC0-1.0  GPL-2.0  GPL-3.0  LGPL-2.0  LGPL-2.1  LGPL-3.0  MIT  MPL-1.1  MPL-2.0
src/licenses/: Apache-2.0  BSD-2-Clause  BSD-3-Clause  CC0-1.0  ISC  MIT  MPL-2.0  Unlicense  Zlib
test/: build-allow-fail  lintian-source.sh
tests/: clap_override.toml  config_tests.rs  debcargo_override.toml  debcargo_override_top_level.toml  override_tests.rs
tests/configs/: aesni-0.10  clang-sys-0.26  hyperx-1  old-versions.txt  redox-syscall-0.1  rhai-1  ring-0.14  security-framework-sys-2  slab-0.1  windows-x86-64-gnullvm-0.42  winreg-0.6
tests/configs/aesni/debian/: rules
tests/configs/afl-0.10/debian/: debcargo.toml  rules
tests/configs/aom-sys-0.2/debian/: debcargo.toml
tests/configs/aom-sys-0.3/debian/: debcargo.toml
tests/configs/broken-dh-strip/debian/: rules
tests/configs/broken-lto/debian/: rules
tests/configs/broken-upstream/debian/: rules
tests/configs/clang-sys/debian/: debcargo.toml
tests/configs/clippy-0.0/debian/: rules
tests/configs/cmake-0.1/debian/: debcargo.toml
tests/configs/compiletest-rs-0.3/debian/: rules
tests/configs/core-foundation-0.9/debian/: debcargo.toml
tests/configs/cpp-demangle-0.3/debian/: debcargo.toml
tests/configs/curl-sys-0.4/debian/: debcargo.toml
tests/configs/dav1d-sys-0.3/debian/: debcargo.toml
tests/configs/dav1d-sys-0.7/debian/: debcargo.toml
tests/configs/debcargo-2/debian/: debcargo.toml
tests/configs/libdbus-sys-0.2/debian/: debcargo.toml
tests/configs/libgit2-sys-0.6/debian/: debcargo.toml
tests/configs/libgit2-sys-0.7/debian/: debcargo.toml
tests/configs/libssh2-sys-0.2/debian/: debcargo.toml
tests/configs/libz-sys-1/debian/: debcargo.toml
tests/configs/mdbook-0.1/debian/: debcargo.toml
tests/configs/nasm-rs-0.2/debian/: debcargo.toml
tests/configs/netlib-src-0.8/debian/: debcargo.toml
tests/sh/: build-allow-fail  cargo-tree-all-features-rec  cargo-tree-any  cargo-tree-deb-rec  integrate.sh  lintian-overrides  lintian-source.sh  lintian-suppress-tags  quick-build.sh
(+55 files in other folders)
