[package]
name = "debcargo"
version = "2.4.4-alpha.0"
authors = [
 "Josh Triplett <josh@joshtriplett.org>",
 "Ximin Luo <infinity0@debian.org>",
 "Vasudev Kamath <vasudev@copyninja.info>"]
license = "MIT/Apache-2.0"
repository = "https://salsa.debian.org/rust-team/debcargo"
description = "Create a Debian package from a Cargo crate."
edition = "2018"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
cargo = "0.50"
clap = "2.18"
chrono = "0.4"
filetime = "0.2"
flate2 = "1"
git2 = "0.13.5"
glob = "0.3"
itertools = "0.9"
regex = "1.0"
semver = "0.10"
semver-parser = "0.9"
serde = "1"
serde_derive = "1"
tar = "0.4"
textwrap = "0.13"
tempfile = "3"
toml = "0.5"
walkdir = "2"
