[package]
name = "debcargo"
version = "2.5.0"
authors = [
 "Josh Triplett <josh@joshtriplett.org>",
 "Ximin Luo <infinity0@debian.org>",
 "Vasudev Kamath <vasudev@copyninja.info>"]
license = "MIT/Apache-2.0"
repository = "https://salsa.debian.org/rust-team/debcargo"
description = "Create a Debian package from a Cargo crate."
edition = "2021"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
cargo = "0.57"
chrono = "0.4"
env_logger = "0.9"
filetime = "0.2"
flate2 = "1"
# Uncomment these if compiling non-Debian package on Debian as Debian's
# libgit2 is too old - 1.1.0 vs 1.3.0 needed by newer git2 crates.
#git2 = "= 0.13.21"
#libgit2-sys = "= 0.12.22+1.1.0"
git2 = "0.13.23"
glob = "0.3"
itertools = "0.10"
log = "0.4"
regex = "1.0"
semver = "1"
serde = "1"
serde_derive = "1"
structopt = { version = "0.3", features = ["color"] }
tar = "0.4"
# this should be kept at the same version as what clap uses
textwrap = "0.15"
tempfile = "3"
toml = "0.5"
walkdir = "2"
