[package]
name = "debcargo"
version = "2.6.1-alpha.0"
authors = [
 "Josh Triplett <josh@joshtriplett.org>",
 "Ximin Luo <infinity0@debian.org>",
 "Vasudev Kamath <vasudev@copyninja.info>"]
license = "MIT/Apache-2.0"
repository = "https://salsa.debian.org/rust-team/debcargo"
description = "Create a Debian package from a Cargo crate."
edition = "2021"
rust-version = "1.58"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
cargo = "0.63"
clap = { version = "4", features = ["cargo", "derive", "wrap_help"] }
chrono = "0.4"
env_logger = "0.9"
filetime = "0.2"
flate2 = "1"
git2 = "0.14"
glob = "0.3"
itertools = "0.10"
log = "0.4"
regex = "1.0"
semver = "1"
serde = "1"
serde_derive = "1"
tar = "0.4"
textwrap = "0.16"
tempfile = "3"
toml = "0.5"
walkdir = "2"
